Do not allow multi-datastore transactions
JIRA: CONTROLLER-2055
Change-Id: I57fed3daf2ae9cd0cc6f4899fe1975c05def5c46
Signed-off-by: Ruslan Kashapov <ruslan.kashapov@pantheon.tech>