@@ -6,13 +6,16 @@
  */
 package org.opendaylight.controller.cluster.databroker;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doThrow;
+import static org.opendaylight.mdsal.common.api.LogicalDatastoreType.CONFIGURATION;
+import static org.opendaylight.mdsal.common.api.LogicalDatastoreType.OPERATIONAL;
 
 import com.google.common.util.concurrent.FluentFuture;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.Map;
 import java.util.concurrent.ExecutionException;
 import org.junit.Assert;
 import org.junit.Test;
@@ -22,10 +25,15 @@ import org.mockito.junit.MockitoJUnitRunner;
 import org.opendaylight.mdsal.common.api.CommitInfo;
 import org.opendaylight.mdsal.common.api.LogicalDatastoreType;
 import org.opendaylight.mdsal.common.api.TransactionCommitFailedException;
+import org.opendaylight.mdsal.common.api.TransactionDatastoreMismatchException;
+import org.opendaylight.mdsal.dom.spi.store.DOMStoreTransactionFactory;
 import org.opendaylight.mdsal.dom.spi.store.DOMStoreWriteTransaction;
 
 @RunWith(MockitoJUnitRunner.StrictStubs.class)
 public class AbstractDOMBrokerWriteTransactionTest {
+
+    @Mock
+    private DOMStoreTransactionFactory txFactory;
     @Mock
     private AbstractDOMTransactionFactory<?> abstractDOMTransactionFactory;
     @Mock
@@ -35,17 +43,22 @@ public class AbstractDOMBrokerWriteTransactionTest {
             extends AbstractDOMBrokerWriteTransaction<DOMStoreWriteTransaction> {
 
         AbstractDOMBrokerWriteTransactionTestImpl() {
-            super(new Object(), Collections.emptyMap(), abstractDOMTransactionFactory);
+            this(Map.of(CONFIGURATION, txFactory));
+        }
+
+        AbstractDOMBrokerWriteTransactionTestImpl(
+                Map<LogicalDatastoreType, DOMStoreTransactionFactory> txFactoryMap) {
+            super(new Object(), txFactoryMap, abstractDOMTransactionFactory);
         }
 
         @Override
         protected DOMStoreWriteTransaction createTransaction(final LogicalDatastoreType key) {
-            return null;
+            return domStoreWriteTransaction;
         }
 
         @Override
-        protected Collection<DOMStoreWriteTransaction> getSubtransactions() {
-            return Collections.singletonList(domStoreWriteTransaction);
+        protected DOMStoreWriteTransaction getSubtransaction() {
+            return domStoreWriteTransaction;
         }
     }
 
@@ -83,5 +96,30 @@ public class AbstractDOMBrokerWriteTransactionTest {
             assertTrue(e.getCause().getCause() == thrown);
             abstractDOMBrokerWriteTransactionTestImpl.cancel();
         }
+    }
+
+    @Test
+    public void getSubtransactionStoreMismatch() {
+        final var testTx = new AbstractDOMBrokerWriteTransactionTestImpl(
+                Map.of(CONFIGURATION, txFactory, OPERATIONAL, txFactory));
+
+        assertEquals(domStoreWriteTransaction, testTx.getSubtransaction(CONFIGURATION));
+
+        final var exception = assertThrows(
+                TransactionDatastoreMismatchException.class,
+                () -> testTx.getSubtransaction(OPERATIONAL));
+        assertEquals(CONFIGURATION, exception.expected());
+        assertEquals(OPERATIONAL, exception.encountered());
+    }
+
+    @Test
+    public void getSubtransactionStoreUndefined() {
+        final var testTx = new AbstractDOMBrokerWriteTransactionTestImpl(Map.of(OPERATIONAL, txFactory));
+
+        final var exception = assertThrows(
+                TransactionDatastoreMismatchException.class,
+                () -> testTx.getSubtransaction(CONFIGURATION));
+        assertEquals(OPERATIONAL, exception.expected());
+        assertEquals(CONFIGURATION, exception.encountered());
     }
 }
